--- a/index.html
+++ b/index.html
@@ -16,6 +16,65 @@
         </div>
         <button>Login</button>
     </nav>
-    
+
+    <section>
+        <header>
+            <h1>Bootcamp dnc</h1>
+
+            <h2>
+                Esse será um evento exclusivo para todos os alunos
+                <br>da <b>DNC</b>, que querem <span class="invert">acelerar a carreira</span> com uma
+                <br>semana intensiva de conteúdo de mercado entre
+                <br><span class="invert">BACK-END, FRONT-END & BANCO DE DADOS.</span>
+            </h2>
+
+        </header>
+        <form>
+            <div class="form-group">
+                <label>Nome:</label>
+                <input type="text" placeholder="Insira seu nome aqui">
+            </div>
+
+            <div class="form-group">
+                <label>Sobrenome:</label>
+                <input type="text" placeholder="Insira seu sobrenome aqui">
+            </div>
+
+            <div class="form-group">
+                <label>Área de Interesse:</label>
+                <div class="checkbox-itens">
+                    <input type="checkbox" value="front">
+                    <label>Front-end</label>
+
+                    <input type="checkbox" value="back">
+                    <label>Back-end</label>
+
+                    <input type="checkbox" value="bd">
+                    <label>Banco de Dados</label>
+                </div>
+
+            </div>
+
+            <div class="form-group">
+                <label>Email:</label>
+                <input type="email" placeholder="Insira seu e-mail aqui">
+            </div>
+
+            <div class="form-group">
+                <label>Telefone:</label>
+                <input type="text" placeholder="(99) 99999-9999">
+            </div>
+
+            <div class="form-group">
+                <label>Insira uma frase criativa aqui:</label>
+                <input type="text" placeholder="Qual frase criativa você gostaria de falar? :)">
+            </div>
+
+            <input type="submit" value="Cadastrar">
+
+        </form>
+
+    </section>
+
 </body>
 </html>
